# thelio-io-windows

./: .gitattributes  .vsconfig  Cargo.toml  README.md  app.manifest  build.py  build.rs  python.py
.github/workflows/: ci.yml
msvc/: Microsoft_VC142_CRT_x64.msm
src/: fan.rs  lib.rs  main.rs
wix/: main.wxs
wrapper/: Program.cs  wrapper.csproj
