[package]
name = "thelio-io"
version = "0.1.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2018"
description = "System76 Thelio Io"
license = "GPL-3.0"
repository = "https://github.com/system76/thelio-io-windows"

[dependencies]
serialport = "4.0"
smbios-lib = "0.7.3"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
winlog = "0.2"

[build-dependencies]
winres = "0.1"
